--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
           root: .
           paths:
             - .verdaccio-cache
-  e2e-tests-node-10:
+  e2e-tests-extended:
     executor:
       class: medium
       name: sb_node_12_browsers
@@ -191,26 +191,17 @@ jobs:
           command: yarn cypress install
       - run:
           name: run e2e tests
-          command: yarn test:e2e-framework --clean --skip preact
+          command: yarn test:e2e-framework --clean --skip angular@latest --skip vue3@next --skip web_components_typescript@latest --skip cra@latest
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
-  e2e-tests-node-12:
+  e2e-tests-core:
     executor:
-      class: medium
+      class: small
       name: sb_node_12_browsers
     working_directory: /tmp/storybook
+    parallelism: 2
     steps:
-      - when:
-          condition:
-            and:
-              - not:
-                  equal: [ master, << pipeline.git.branch >> ]
-              - not:
-                  equal: [ next, << pipeline.git.branch >> ]
-          steps:
-            - ensure-pr-is-labeled-with:
-                label: "run e2e extended test suite"
       - git-shallow-clone/checkout_advanced:
           clone_options: '--depth 1 --verbose'
       - attach_workspace:
@@ -233,7 +224,8 @@ jobs:
           command: yarn cypress install
       - run:
           name: Run E2E tests
-          command: yarn test:e2e-framework preact
+          # Do not test CRA nor Web Components here because it's done in PnP part
+          command: yarn test:e2e-framework angular@latest vue3@next
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
@@ -269,7 +261,7 @@ jobs:
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
-  e2e-tests-yarn-2-pnp:
+  e2e-tests-pnp:
     executor:
       class: medium
       name: sb_node_12_browsers
@@ -297,7 +289,7 @@ jobs:
           command: yarn cypress install
       - run:
           name: run e2e tests
-          command: yarn test:e2e-framework --use-yarn-2-pnp sfcVue cra
+          command: yarn test:e2e-framework --use-yarn-2-pnp sfcVue@latest cra@latest web_components_typescript@latest
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
@@ -479,13 +471,13 @@ workflows:
       - publish:
           requires:
             - build
-      - e2e-tests-node-10:
+      - e2e-tests-extended:
           requires:
             - publish
-      - e2e-tests-node-12:
+      - e2e-tests-core:
           requires:
             - publish
-      - e2e-tests-yarn-2-pnp:
+      - e2e-tests-pnp:
           requires:
             - publish
       - e2e-tests-cra-bench:
